# HN_Smart_Hub

./: .gitignore  App.xaml  App.xaml.cs  HN_Smart_Hub.csproj  HN_Smart_Hub.sln  MainWindow.xaml  MainWindow.xaml.cs  README.md  erl_crash.dump  hn_smart_bdd_demo.sql  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/assistant/: assistant.exs  entity.ex  helpers.ex  input.json  intents.ex  match.ex  mix.exs  queries.ex  static_infos.ex  synonymes.ex  test_assistant.exs
src-tauri/assistant/_build/dev/lib/assistant/.mix/: compile.protocols
src-tauri/assistant/_build/dev/lib/assistant/consolidated/: Elixir.Collectable.beam  Elixir.Enumerable.beam  Elixir.Inspect.beam  Elixir.JSON.Encoder.beam  Elixir.Jason.Encoder.beam  Elixir.String.Chars.beam
src-tauri/assistant/_build/dev/lib/assistant/ebin/: assistant.app
src-tauri/assistant/_build/dev/lib/jason/.mix/: compile.elixir
src-tauri/assistant/_build/dev/lib/jason/ebin/: Elixir.Enumerable.Jason.OrderedObject.beam  Elixir.Jason.Codegen.beam  Elixir.Jason.DecodeError.beam  Elixir.Jason.Decoder.Unescape.beam  Elixir.Jason.Decoder.beam  Elixir.Jason.Encode.beam  Elixir.Jason.EncodeError.beam  Elixir.Jason.Encoder.Any.beam  (+19 more)
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  offline.rs
src-tauri/src/commands/: chatbot.rs  chatbot_1.rs  chatbot_logs.rs  comptes.rs  conges.rs  evenements.rs  formation.rs  indicateurs.rs  mod.rs  produits.rs  taches.rs  televente.rs
src-tauri/src/models/: intent.rs  mod.rs  static_infos.rs
(+76 files in other folders)
