[package]
name = "hn_smart_hub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "hn_smart_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
dotenvy = "0.15"
bcrypt = "0.15"
tauri-plugin-opener = "2"
once_cell = "1.21.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.1"
log = "0.4"
env_logger = "0.10"
tempfile = "3.20.0"
